<?xml version="1.0"?>
<package>
  <name>al5d_description</name>
  <version>0.0.0</version>
  <description>The al5d_description package</description>

  <maintainer email="renevaneendenburg@live.nl">René van Eendenburg</maintainer>

  <license>bla</license>

  <author email="renevaneendenburg@live.nl">René van Eendenburg</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
